--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,73 @@
-.App {
+html {
+	height: 100%;	
+}
+
+body {
+	font-family: arial, verdana;
+  background: 
+		linear-gradient(rgba(196, 102, 0, 0.6), rgba(155, 89, 182, 0.6));
+}
+
+.header{
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Clear, .Sort {
+  margin: 0 auto;
+  display: block;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+form{
+  /* padding: 20px 520px ;
+  margin: 0 auto; */
+  font-size: 20px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+form select {
+  width: auto;
+  height: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+form input{
+  margin-left: 5px;
+  font-family: Arial, Helvetica, sans-serif;
+  width: auto;
+  height: 20px;
+}
+
+form button{
+  background-color: rgb(193, 162, 221);
+  font-size: 10px;
+  font-weight: bold;
+  border-radius: 5px;
+  margin-left: 5px;
+}
+
+.items{
+  background-color: aliceblue;
+  width: 200px;
+  height: 40px;
+  border-radius: 10px;
+  margin: 0 auto;
+
+
+}
+
+.items li{
+  list-style-type: none;
+  text-align: center;
+  font-weight: bold;
+}
+
+.items button{
+  background-color: rgb(239, 133, 190);
+  border-radius: 10px;
+  margin: 5px 2px;
+}
+
+.Footer p{
+  text-align: center;
 }
