--- a/src/App.css
+++ b/src/App.css
@@ -4,23 +4,39 @@ html {
 
 body {
 	font-family: arial, verdana;
+  font-size: large;
   background: 
-		linear-gradient(rgba(196, 102, 0, 0.6), rgba(155, 89, 182, 0.6));
+		linear-gradient(180deg,rgba(196, 102, 0, 0.6), rgba(245, 157, 64, 0.6), rgba(155, 89, 182, 0.6), rgba(219, 172, 238, 0.6));
 }
 
 .header{
   text-align: center;
+  height: 150px;
+  margin-top: 50px;
 }
 
-.Clear, .Sort {
+.Clear {
   margin: 0 auto;
   display: block;
+  background-color: rgb(162, 162, 243);
+  border-radius: 3px;
+  border-color: rgb(162, 162, 243);
+  font-size: large;
+}
+
+.Sort {
+  margin: 0 auto;
+  display: block;
+  border-radius: 3px;
+  font-size: large;
+  border-width: 2px;
+  border-color: rgb(242, 139, 197);
 }
 
 form{
   /* padding: 20px 520px ;
   margin: 0 auto; */
-  font-size: 20px;
+  font-size: large;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -29,6 +45,9 @@ form{
 form select {
   width: auto;
   height: 20px;
+  border-radius: 3px;
+  border-color:rgb(49, 142, 235);
+  border-width: 2px;
 }
 
 form input{
@@ -36,11 +55,12 @@ form input{
   font-family: Arial, Helvetica, sans-serif;
   width: auto;
   height: 20px;
+  border-radius: 5px;
 }
 
 form button{
   background-color: rgb(193, 162, 221);
-  font-size: 10px;
+  font-size: 15px;
   font-weight: bold;
   border-radius: 5px;
   margin-left: 5px;
@@ -49,10 +69,11 @@ form button{
 .items{
   background-color: aliceblue;
   width: 200px;
-  height: 40px;
+  height: 50px;
   border-radius: 10px;
-  margin: 0 auto;
-
+  margin: 10px auto;
+  padding-top: 5px;
+  padding-bottom: 5px;
 
 }
 
@@ -69,5 +90,15 @@ form button{
 }
 
 .Footer p{
+  text-align: center;
+}
+
+.Percentage{
+  background-color: rgb(244, 196, 234);
+  width: 150px;
+  height: 15px;
+  border-radius: 10px;
+  margin: 20px;
+  padding-left: 5px;
   text-align: center;
 }
